[package]
name = "bl-rom-rt"
version = "0.0.0"
edition = "2021"
links = "bl-rom-rt" # Prevent multiple versions of this crate being linked

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-rom-rt-macros = { path = "macros", version = "0.0.0" }

[dev-dependencies]
panic-halt = "0.2.0"

[workspace]
members = ["macros"]
